--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.11"
+    "@vueuse/core": "^10.7.1",
+    "axios": "^1.6.3",
+    "chart.js": "^4.4.1",
+    "dayjs": "^1.11.10",
+    "lodash": "^4.17.21",
+    "pinia": "^2.1.7",
+    "vue": "^3.3.11",
+    "vue-chartjs": "^5.3.0",
+    "vue-email": "^0.8.5",
+    "vue-i18n": "^9.8.0",
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.4.9"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@vitejs/plugin-vue": "^4.5.2",
     "typescript": "^5.2.2",
+    "unocss": "^0.58.3",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
   }
