--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "sparkle-manage",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@vueuse/core": "^10.7.1",
@@ -23,8 +25,10 @@
     "vuetify": "^3.4.9"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.6.1",
     "@types/lodash": "^4.14.202",
     "@vitejs/plugin-vue": "^4.5.2",
+    "eslint": "^8.56.0",
     "typescript": "^5.2.2",
     "unocss": "^0.58.3",
     "vite": "^5.0.8",
