--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged",
+    "commitlint": "commitlint --edit",
+    "commitizen": "commitizen init cz-conventional-changelog --pnpm --save-dev --save-exact --force",
+    "commit": "git-cz"
   },
   "dependencies": {
     "@vueuse/core": "^10.7.1",
@@ -26,9 +31,18 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.1",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@commitlint/cz-commitlint": "^18.4.3",
     "@types/lodash": "^4.14.202",
     "@vitejs/plugin-vue": "^4.5.2",
+    "commitizen": "^4.3.0",
+    "commitlint": "^18.4.3",
     "eslint": "^8.56.0",
+    "husky": "^8.0.3",
+    "inquirer": "^8.2.5",
+    "lint-staged": "^15.2.0",
+    "sass": "^1.69.7",
+    "stylelint": "^16.1.0",
     "typescript": "^5.2.2",
     "unocss": "^0.58.3",
     "vite": "^5.0.8",
