--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@antfu/eslint-config": "^2.6.1",
     "@commitlint/config-conventional": "^18.4.3",
     "@commitlint/cz-commitlint": "^18.4.3",
+    "@types/eslint__eslintrc": "^2.1.1",
     "@types/lodash": "^4.14.202",
     "@vitejs/plugin-vue": "^4.5.2",
     "commitizen": "^4.3.0",
     "commitlint": "^18.4.3",
-    "eslint": "^8.56.0",
+    "eslint": "npm:eslint-ts-patch@8.56.0-0",
+    "eslint-ts-patch": "8.56.0-0",
     "husky": "^8.0.3",
     "inquirer": "^8.2.5",
     "lint-staged": "^15.2.0",
@@ -45,6 +47,9 @@
     "stylelint": "^16.1.0",
     "typescript": "^5.2.2",
     "unocss": "^0.58.3",
+    "unplugin-auto-import": "^0.17.3",
+    "unplugin-vue-components": "^0.26.0",
+    "unplugin-vue-router": "^0.7.0",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
   }
