🐳 chore:  更换parserPreset预设，增加emoji提交

--- a/packages/@commitlint/config-git-commit-plugin/package.json
+++ b/packages/@commitlint/config-git-commit-plugin/package.json
@@ -12,6 +12,6 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "conventional-changelog-conventionalcommits": "^7.0.2"
+    "@gitmoji/parser-opts": "^1.4.0"
   }
 }
