--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "unplugin-vue-components": "^0.26.0",
     "unplugin-vue-router": "^0.7.0",
     "vite": "^5.0.8",
+    "vite-plugin-vuetify": "^2.0.1",
     "vue-tsc": "^1.8.25"
   }
 }
