🐎 ci: 修正更新脚本

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,4 +28,4 @@ jobs:
           port: 22
           script: |
             cd /opt/docker/config
-            ./update.sh
+            ./update-sparkle-manage.sh
