--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name www.iridescent.icu iridescent.icu localhost;
+  server_name www.manage.iridescent.icu manage.iridescent.icu;
 
   return 301 https://$host$request_uri;
 }
@@ -16,7 +16,7 @@ server {
   ssl_prefer_server_ciphers on;
 
   location / {
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html/sparkle-manage;
     index index.html index.htm;
   }
 }
