🐎 ci: 优化cicd构建配置

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,9 @@
 server {
-  listen 8080;
+  listen 80;
   server_name localhost;
 
   location / {
-    root /usr/share/nginx/html/sparkle-manage;
+    root /usr/share/nginx/html;
     index index.html index.htm;
   }
 }
