--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@commitlint/config-conventional": "^18.4.3",
     "@commitlint/config-git-commit-plugin": "workspace:*",
     "@commitlint/cz-commitlint": "^18.4.3",
+    "@iconify/vue": "^4.1.1",
     "@types/eslint__eslintrc": "^2.1.1",
     "@types/lodash": "^4.14.202",
     "@vitejs/plugin-vue": "^5.0.3",
@@ -45,6 +46,7 @@
     "inquirer": "^8.2.5",
     "lint-staged": "^15.2.0",
     "sass": "^1.69.7",
+    "sass-loader": "^14.1.0",
     "stylelint": "^16.1.0",
     "typescript": "^5.2.2",
     "unocss": "^0.58.3",
