--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-chartjs": "^5.3.0",
@@ -36,6 +37,7 @@
     "@iconify/vue": "^4.1.1",
     "@types/eslint__eslintrc": "^2.1.1",
     "@types/lodash": "^4.14.202",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.3",
     "commitizen": "^4.3.0",
     "commitlint": "^18.4.3",
