--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/eslint__eslintrc": "^2.1.1",
     "@types/lodash": "^4.14.202",
     "@types/nprogress": "^0.2.3",
+    "@unocss/preset-wind": "^0.58.4",
     "@vitejs/plugin-vue": "^5.0.3",
     "commitizen": "^4.3.0",
     "commitlint": "^18.4.3",
@@ -48,7 +49,6 @@
     "inquirer": "^8.2.5",
     "lint-staged": "^15.2.0",
     "sass": "^1.69.7",
-    "sass-loader": "^14.1.0",
     "stylelint": "^16.1.0",
     "typescript": "^5.2.2",
     "unocss": "^0.58.3",
@@ -57,7 +57,6 @@
     "unplugin-vue-router": "^0.7.0",
     "vite": "^5.0.12",
     "vite-plugin-vue-layouts": "^0.11.0",
-    "vite-plugin-vuetify": "^2.0.1",
     "vue-tsc": "^1.8.27"
   }
 }
