--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
+    "lint:style": "stylelint src/**/*.{css,scss,vue} --fix",
     "prepare": "husky install",
     "commit": "git-cz",
     "lint-staged": "lint-staged",
@@ -38,6 +39,7 @@
     "@types/eslint__eslintrc": "^2.1.1",
     "@types/lodash": "^4.14.202",
     "@types/nprogress": "^0.2.3",
+    "@unocss/eslint-plugin": "^0.58.4",
     "@unocss/preset-wind": "^0.58.4",
     "@vitejs/plugin-vue": "^5.0.3",
     "commitizen": "^4.3.0",
@@ -50,6 +52,11 @@
     "lint-staged": "^15.2.0",
     "sass": "^1.69.7",
     "stylelint": "^16.1.0",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recess-order": "^4.4.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-config-standard-scss": "^13.0.0",
     "typescript": "^5.2.2",
     "unocss": "^0.58.3",
     "unplugin-auto-import": "^0.17.3",
