--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,7 @@ server {
   server_name localhost;
 
   location / {
+    try_files $uri $uri/ /index.html;
     root /usr/share/nginx/html;
     index index.html index.htm;
   }
